LendersApp/src/objects/StipMaster__c.object
<CustomObject>
    <fields>
        <fullName>Add_to_all_Deals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to all Deals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stip_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Include_in_Offers__c</fullName>
        <label>Include in Offers</label>
        <picklist>
            <picklistValues>
                <fullName>Always include in offers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Include in offers when not already received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never include</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>PreQualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move to Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Stip Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Notes__c</columns>
        <columns>Stage__c</columns>
        <columns>Renewal__c</columns>
        <columns>Include_in_Offers__c</columns>
        <columns>Add_to_all_Deals__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stip Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stip Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>